package structural.composite;

public class NutLa extends Nut{
    public NutLa(int giaTri) {
        super(giaTri);
    }

    public void ThemTrai(Nut nut) {
    }

    public void ThemPhai(Nut nut) {
    }

    public void XoaTrai() {
    }

    public void XoaPhai() {
    }

    public void Duyet() {
        System.out.print(" " + this.giaTri);
    }
}
